<?xml version="1.0"?>
<package format="2">
  <name>rotation_solver</name>
  <version>1.12.0</version>
  <description>
    It finds the rigid body rotation between vectors.
  </description>
  <maintainer email="goktug@leodrive.com">gy</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>libnlopt-dev</build_depend>
  <build_depend>cmake_modules</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
